// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render component with dimension m 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  transition: all 0.3s;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin: 0 0 0 8px;
}

[data-icon='left'] .c9 {
  margin: 0 8px 0 0;
}

.c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

[data-disabled='true'] .c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

[data-dimension='m'] .c9 {
  width: 20px;
  height: 20px;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-start;
  padding: 16px 16px 15px 16px;
}

[data-dimension='m'] .c6.c6 {
  padding: 10px 16px 9px 16px;
}

[data-icon='left'] .c6 {
  flex-direction: row-reverse;
}

.c7 {
  display: inline-flex;
  flex: 1 1 auto;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 54px;
  width: 100%;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  text-align: left;
  border: none;
  background: none;
  margin: 0;
  padding: 0;
  overflow: visible;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle2, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle2, 16px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle2, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-disabled='false'] .c4:hover {
  cursor: pointer;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
}

[data-disabled='false'] .c4:active {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

[data-disabled='false'] .c4:focus-visible {
  outline: none;
}

[data-disabled='false'] .c4:focus-visible:before {
  position: absolute;
  content: '';
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  top: -1px;
  left: 0;
  bottom: -1px;
  right: 0;
}

[data-disabled='true'] .c4 {
  cursor: not-allowed;
  user-select: none;
}

[data-dimension='m'] .c4 {
  min-height: 38px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle3, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle3, 14px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle3, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c2>.c3 .c8 {
  transform: rotate(0deg);
}

.c11 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  overflow-y: auto;
  max-height: 100vh;
  padding: 4px 16px 16px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-dimension='m'] .c11 {
  padding: 4px 16px 10px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 {
  position: relative;
}

.c0>.c1:first-child {
  border-top: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c0>.c1:first-child .c5 {
  padding: 9px 16px;
}

.c0>.c1:last-child {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c10 {
  overflow: hidden;
  transition: max-height 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  max-height: 0;
  visibility: hidden;
}

<body>
    <div>
      <div
        class="c0"
        data-dimension="m"
        data-icon="right"
      >
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_1"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_1"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Первый пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_1"
              class="c11"
              id="accordion_content_AccordionItem_1"
              role="region"
            >
              Контент первого пункта
            </div>
          </div>
        </div>
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_2"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_2"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Второй пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_2"
              class="c11"
              id="accordion_content_AccordionItem_2"
              role="region"
            >
              Аккордеон — это вертикальный список заголовков, которые, при нажатии, показывают контент находящийся под ними.
            </div>
          </div>
        </div>
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_3"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_3"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Третий пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_3"
              class="c11"
              id="accordion_content_AccordionItem_3"
              role="region"
            >
              Будущее игр никогда не было таким вдохновляющим. Творчество в играх процветает. Новые сервисы позволяют находить больше игр, а также приближают игроков к любимым играм, стримерам и создателям. Облако создает огромную возможность для потоковой передачи игр консольного уровня, что позволит людям играть с теми игроками, с кем хочется и где захочется. И для многих из нас нет ничего более вдохновляющего, чем рассвет нового поколения консолей.
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  transition: all 0.3s;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin: 0 0 0 8px;
}

[data-icon='left'] .c9 {
  margin: 0 8px 0 0;
}

.c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

[data-disabled='true'] .c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

[data-dimension='m'] .c9 {
  width: 20px;
  height: 20px;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-start;
  padding: 16px 16px 15px 16px;
}

[data-dimension='m'] .c6.c6 {
  padding: 10px 16px 9px 16px;
}

[data-icon='left'] .c6 {
  flex-direction: row-reverse;
}

.c7 {
  display: inline-flex;
  flex: 1 1 auto;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 54px;
  width: 100%;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  text-align: left;
  border: none;
  background: none;
  margin: 0;
  padding: 0;
  overflow: visible;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle2, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle2, 16px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle2, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-disabled='false'] .c4:hover {
  cursor: pointer;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
}

[data-disabled='false'] .c4:active {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

[data-disabled='false'] .c4:focus-visible {
  outline: none;
}

[data-disabled='false'] .c4:focus-visible:before {
  position: absolute;
  content: '';
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  top: -1px;
  left: 0;
  bottom: -1px;
  right: 0;
}

[data-disabled='true'] .c4 {
  cursor: not-allowed;
  user-select: none;
}

[data-dimension='m'] .c4 {
  min-height: 38px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle3, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle3, 14px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle3, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c2>.c3 .c8 {
  transform: rotate(0deg);
}

.c11 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  overflow-y: auto;
  max-height: 100vh;
  padding: 4px 16px 16px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-dimension='m'] .c11 {
  padding: 4px 16px 10px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 {
  position: relative;
}

.c0>.c1:first-child {
  border-top: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c0>.c1:first-child .c5 {
  padding: 9px 16px;
}

.c0>.c1:last-child {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c10 {
  overflow: hidden;
  transition: max-height 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  max-height: 0;
  visibility: hidden;
}

<div>
    <div
      class="c0"
      data-dimension="m"
      data-icon="right"
    >
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_1"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_1"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Первый пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_1"
            class="c11"
            id="accordion_content_AccordionItem_1"
            role="region"
          >
            Контент первого пункта
          </div>
        </div>
      </div>
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_2"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_2"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Второй пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_2"
            class="c11"
            id="accordion_content_AccordionItem_2"
            role="region"
          >
            Аккордеон — это вертикальный список заголовков, которые, при нажатии, показывают контент находящийся под ними.
          </div>
        </div>
      </div>
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_3"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_3"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Третий пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_3"
            class="c11"
            id="accordion_content_AccordionItem_3"
            role="region"
          >
            Будущее игр никогда не было таким вдохновляющим. Творчество в играх процветает. Новые сервисы позволяют находить больше игр, а также приближают игроков к любимым играм, стримерам и создателям. Облако создает огромную возможность для потоковой передачи игр консольного уровня, что позволит людям играть с теми игроками, с кем хочется и где захочется. И для многих из нас нет ничего более вдохновляющего, чем рассвет нового поколения консолей.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render default component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  transition: all 0.3s;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin: 0 0 0 8px;
}

[data-icon='left'] .c9 {
  margin: 0 8px 0 0;
}

.c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

[data-disabled='true'] .c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

[data-dimension='m'] .c9 {
  width: 20px;
  height: 20px;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-start;
  padding: 16px 16px 15px 16px;
}

[data-dimension='m'] .c6.c6 {
  padding: 10px 16px 9px 16px;
}

[data-icon='left'] .c6 {
  flex-direction: row-reverse;
}

.c7 {
  display: inline-flex;
  flex: 1 1 auto;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 54px;
  width: 100%;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  text-align: left;
  border: none;
  background: none;
  margin: 0;
  padding: 0;
  overflow: visible;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle2, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle2, 16px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle2, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-disabled='false'] .c4:hover {
  cursor: pointer;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
}

[data-disabled='false'] .c4:active {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

[data-disabled='false'] .c4:focus-visible {
  outline: none;
}

[data-disabled='false'] .c4:focus-visible:before {
  position: absolute;
  content: '';
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  top: -1px;
  left: 0;
  bottom: -1px;
  right: 0;
}

[data-disabled='true'] .c4 {
  cursor: not-allowed;
  user-select: none;
}

[data-dimension='m'] .c4 {
  min-height: 38px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle3, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle3, 14px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle3, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c2>.c3 .c8 {
  transform: rotate(0deg);
}

.c11 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  overflow-y: auto;
  max-height: 100vh;
  padding: 4px 16px 16px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-dimension='m'] .c11 {
  padding: 4px 16px 10px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 {
  position: relative;
}

.c0>.c1:first-child {
  border-top: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c0>.c1:first-child .c5 {
  padding: 15px 16px;
}

.c0>.c1:last-child {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c10 {
  overflow: hidden;
  transition: max-height 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  max-height: 0;
  visibility: hidden;
}

<body>
    <div>
      <div
        class="c0"
        data-dimension="l"
        data-icon="right"
      >
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_1"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_1"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Первый пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_1"
              class="c11"
              id="accordion_content_AccordionItem_1"
              role="region"
            >
              Контент первого пункта
            </div>
          </div>
        </div>
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_2"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_2"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Второй пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_2"
              class="c11"
              id="accordion_content_AccordionItem_2"
              role="region"
            >
              Аккордеон — это вертикальный список заголовков, которые, при нажатии, показывают контент находящийся под ними.
            </div>
          </div>
        </div>
        <div
          class="c1 c2"
          data-disabled="false"
        >
          <div
            aria-controls="accordion_content_AccordionItem_3"
            aria-disabled="false"
            class="c3 c4"
            id="accordion_title_AccordionItem_3"
            role="button"
            tabindex="0"
          >
            <span
              class="c5 c6"
            >
              <span
                class="c7"
              >
                Третий пункт
              </span>
              <div
                aria-hidden="true"
                class="c8 c9"
              />
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              aria-labelledby="accordion_title_AccordionItem_3"
              class="c11"
              id="accordion_content_AccordionItem_3"
              role="region"
            >
              Будущее игр никогда не было таким вдохновляющим. Творчество в играх процветает. Новые сервисы позволяют находить больше игр, а также приближают игроков к любимым играм, стримерам и создателям. Облако создает огромную возможность для потоковой передачи игр консольного уровня, что позволит людям играть с теми игроками, с кем хочется и где захочется. И для многих из нас нет ничего более вдохновляющего, чем рассвет нового поколения консолей.
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  transition: all 0.3s;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin: 0 0 0 8px;
}

[data-icon='left'] .c9 {
  margin: 0 8px 0 0;
}

.c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

[data-disabled='true'] .c9 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

[data-dimension='m'] .c9 {
  width: 20px;
  height: 20px;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-start;
  padding: 16px 16px 15px 16px;
}

[data-dimension='m'] .c6.c6 {
  padding: 10px 16px 9px 16px;
}

[data-icon='left'] .c6 {
  flex-direction: row-reverse;
}

.c7 {
  display: inline-flex;
  flex: 1 1 auto;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 54px;
  width: 100%;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  text-align: left;
  border: none;
  background: none;
  margin: 0;
  padding: 0;
  overflow: visible;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle2, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle2, 16px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle2, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-disabled='false'] .c4:hover {
  cursor: pointer;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
}

[data-disabled='false'] .c4:active {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

[data-disabled='false'] .c4:focus-visible {
  outline: none;
}

[data-disabled='false'] .c4:focus-visible:before {
  position: absolute;
  content: '';
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  top: -1px;
  left: 0;
  bottom: -1px;
  right: 0;
}

[data-disabled='true'] .c4 {
  cursor: not-allowed;
  user-select: none;
}

[data-dimension='m'] .c4 {
  min-height: 38px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Subtitle_Subtitle3, 550);
  font-size: var(--admiral-font-size-Subtitle_Subtitle3, 14px);
  line-height: var(--admiral-line-height-Subtitle_Subtitle3, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c2>.c3 .c8 {
  transform: rotate(0deg);
}

.c11 {
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  overflow-y: auto;
  max-height: 100vh;
  padding: 4px 16px 16px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

[data-dimension='m'] .c11 {
  padding: 4px 16px 10px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 {
  position: relative;
}

.c0>.c1:first-child {
  border-top: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c0>.c1:first-child .c5 {
  padding: 15px 16px;
}

.c0>.c1:last-child {
  border-bottom: 1px solid var(--admiral-color-Neutral_Neutral20, #D7D8DA);
}

.c10 {
  overflow: hidden;
  transition: max-height 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  max-height: 0;
  visibility: hidden;
}

<div>
    <div
      class="c0"
      data-dimension="l"
      data-icon="right"
    >
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_1"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_1"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Первый пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_1"
            class="c11"
            id="accordion_content_AccordionItem_1"
            role="region"
          >
            Контент первого пункта
          </div>
        </div>
      </div>
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_2"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_2"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Второй пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_2"
            class="c11"
            id="accordion_content_AccordionItem_2"
            role="region"
          >
            Аккордеон — это вертикальный список заголовков, которые, при нажатии, показывают контент находящийся под ними.
          </div>
        </div>
      </div>
      <div
        class="c1 c2"
        data-disabled="false"
      >
        <div
          aria-controls="accordion_content_AccordionItem_3"
          aria-disabled="false"
          class="c3 c4"
          id="accordion_title_AccordionItem_3"
          role="button"
          tabindex="0"
        >
          <span
            class="c5 c6"
          >
            <span
              class="c7"
            >
              Третий пункт
            </span>
            <div
              aria-hidden="true"
              class="c8 c9"
            />
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            aria-labelledby="accordion_title_AccordionItem_3"
            class="c11"
            id="accordion_content_AccordionItem_3"
            role="region"
          >
            Будущее игр никогда не было таким вдохновляющим. Творчество в играх процветает. Новые сервисы позволяют находить больше игр, а также приближают игроков к любимым играм, стримерам и создателям. Облако создает огромную возможность для потоковой передачи игр консольного уровня, что позволит людям играть с теми игроками, с кем хочется и где захочется. И для многих из нас нет ничего более вдохновляющего, чем рассвет нового поколения консолей.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
